@@ -1,7 +1,122 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <window>
-    <onload>action(back)</onload>
+	<defaultcontrol always="true">11</defaultcontrol>
+	<include>fadeInOut</include>
+	
     <controls>
-        <!--removed: not used-->
-    </controls>
+		<control type="group">
+			<posx>0</posx>
+            <posy>0</posy>
+
+			<control type="image">
+                <posx>0</posx>
+                <posy>0</posy>
+                <width>588</width>
+                <height>fullscreenHeight</height>
+                <aspectratio>stretch</aspectratio>
+                <texture>colors/black.png</texture>
+                <bordersize>0</bordersize>
+                <colordiffuse>99FFFFFF</colordiffuse>
+            </control>
+
+			<control type="label">
+                <posx>24</posx>
+                <posy>1-row</posy>
+                <width>7-col</width>
+                <font>regularStrong</font>
+                <textcolor>selected</textcolor>
+                <shadowcolor>-</shadowcolor>
+                <label>[UPPERCASE]$INFO[VideoPlayer.ChannelGroup][/UPPERCASE]</label>
+            </control>
+			
+			<control type="list" id="11">
+	            <posx>0</posx>
+	            <posy>140</posy>
+	            <width>8-col</width>
+	            <height>16-row</height>
+	            <onleft>PreviousChannelGroup</onleft>
+	            <onright>60</onright>
+	            <ondown>50</ondown>
+	            <onup>50</onup>
+	            <pagecontrol>60</pagecontrol>
+	            <scrolltime tween="sine" easing="inout">300</scrolltime>
+	            <itemlayout width="8-col" height="2-row">
+	                <control type="label">
+	                    <posx>24</posx>
+	                    <posy>12</posy>
+	                    <width>7-col</width>
+	                    <font>itemTitle</font>
+	                    <textcolor>selected</textcolor>
+	                    <shadowcolor>-</shadowcolor>
+	                    <label>$INFO[ListItem.Label]: $INFO[ListItem.Title]</label>
+	                </control>
+	                <control type="label">
+	                    <posx>24</posx>
+	                    <posy>69</posy>
+	                    <width>7-col</width>
+	                    <font>smallStrong</font>
+	                    <align>left</align>
+	                    <height>24</height>
+	                    <textcolor>selected</textcolor>
+	                    <shadowcolor>-</shadowcolor>
+	                    <label>$LOCALIZE[19031]: $INFO[ListItem.nextstarttime] - $INFO[ListItem.nextTitle]</label>
+	                </control>
+	            </itemlayout>
+	            <focusedlayout width="8-col" height="2-row">
+	                <control type="image">
+	                    <posx>0</posx>
+	                    <posy>0</posy>
+	                    <width>8-col</width>
+	                    <height>2-row</height>
+	                    <aspectratio>stretch</aspectratio>
+	                    <texture>colors/selected.png</texture>
+	                    <bordersize>0</bordersize>
+	                    <colordiffuse>ffFFFFFF</colordiffuse>
+	                </control>
+	                <control type="label">
+	                    <posx>24</posx>
+	                    <posy>12</posy>
+	                    <width>7-col</width>
+	                    <font>itemTitle</font>
+	                    <textcolor>black</textcolor>
+						<selectedcolor>black</selectedcolor>
+	                    <shadowcolor>-</shadowcolor>
+	                    <label>$INFO[ListItem.Label]: $INFO[ListItem.Title]</label>
+	                </control>
+	                <control type="label">
+	                    <posx>24</posx>
+	                    <posy>69</posy>
+	                    <width>7-col</width>
+	                    <font>smallStrong</font>
+	                    <align>left</align>
+	                    <height>24</height>
+	                    <textcolor>black</textcolor>
+						<selectedcolor>black</selectedcolor>
+	                    <shadowcolor>-</shadowcolor>
+	                    <label>$LOCALIZE[19031]: $INFO[ListItem.nextstarttime] - $INFO[ListItem.nextTitle]</label>
+	                </control>
+                
+	            </focusedlayout>
+	        </control>
+
+			<!--page scrollbar-->
+	        <control type="group" id="8000">
+	            <visible>Control.IsVisible(60)</visible>
+	            <animation effect="fade" start="100" end="0" time="100" condition="!controlgroup(8000).hasfocus">conditional</animation>
+	            <control type="scrollbar" id="60">
+	                <posx>588</posx>
+	                <posy>0</posy>
+	                <height>fullscreenHeight</height>
+	                <onleft>11</onleft>
+	            </control>
+	        </control>
+		</control>
+
+		<!--debugging-->
+        <include>Debug_Grid</include>
+        <control type="label">
+            <include>WindowID</include>
+            <label>DialogPVRChannelsOSD.xml</label>
+        </control>
+	</controls>
 </window>
