@@ -2,7 +2,7 @@
 <window id="0">
     <defaultcontrol always="true">9000</defaultcontrol>
     <allowoverlay>yes</allowoverlay>
-    <onload condition="!Player.HasAudio">PlayerControl(stop)</onload>
+    <onload condition="Skin.hassetting(stopVideoOnMenu) + !Player.HasAudio">PlayerControl(stop)</onload>
     <animation effect="fade" start="100" end="0" time="300">WindowClose</animation>
     <animation effect="fade" start="0" end="100" time="1000" reversible="true">WindowOpen</animation>
     <controls>
