@@ -2,11 +2,11 @@
 <window>
     <defaultcontrol always="false">9000</defaultcontrol>
     <allowoverlay>no</allowoverlay>
-    <onload condition="!Player.HasAudio">PlayerControl(stop)</onload>
+    <onload condition="Skin.hassetting(stopVideoOnMenu) + !Player.HasAudio">PlayerControl(stop)</onload>
 	<onunload>Skin.SetString(showRecentVideoItems,true)</onunload>
 	<previouswindow>home</previouswindow>
-    <controls>
-        <include>globalBackground</include>
+    <controls>        		
+		<include>globalBackground</include>
         <!--page container group-->
         <control type="group">
             <!--window fader-->
@@ -65,7 +65,13 @@
                             </control>
                         </focusedlayout>
                         <content>
-                            <item id="18">
+                            <item id="20">
+                                <visible>Player.HasVideo</visible>
+                                <label>31136</label>
+                                <label2></label2>
+                                <onclick>action(fullscreen)</onclick>
+                            </item>
+							<item id="18">
                                 <visible>System.HasMediaDVD</visible>
                                 <label>341</label>
                                 <label2></label2>
@@ -429,14 +435,6 @@
                         <description>Empty so we can pass the values up one level</description>
                         <visible>False</visible>
                     </control>
-                </control>
-                <!--Preview window-->
-				<control type="videowindow">
-					<visible>Player.HasVideo</visible>
-                    <posx>col-21-begin</posx>
-                    <posy>56</posy>
-                    <width>4-col</width>
-                    <height>162</height>
                 </control>
 				<!--Main content listing-->
                 <control type="group" id="9999">
