@@ -124,20 +124,27 @@
                     <selected>Skin.HasSetting(useGlobalFanartBackground)</selected>
                 </control>
 				<control type="radiobutton" id="6">
+                    <description>Stop video on return to menu</description>
+                    <width>16-col</width>
+                    <label>31143</label>
+                    <onclick>Skin.ToggleSetting(stopVideoOnMenu)</onclick>
+                    <selected>Skin.HasSetting(stopVideoOnMenu)</selected>
+                </control>
+				<control type="radiobutton" id="7">
                     <description>Reverse power down options</description>
                     <width>16-col</width>
                     <label>31142</label>
                     <onclick>Skin.ToggleSetting(exitFirst)</onclick>
                     <selected>Skin.HasSetting(exitFirst)</selected>
                 </control>
-                <control type="radiobutton" id="7">
+                <control type="radiobutton" id="8">
                     <description>Enable Debug Grid</description>
                     <width>16-col</width>
                     <label>31034</label>
                     <onclick>Skin.ToggleSetting(DebugGrid)</onclick>
                     <selected>Skin.HasSetting(DebugGrid)</selected>
                 </control>
-                <control type="radiobutton" id="8">
+                <control type="radiobutton" id="9">
                     <description>Disable Debug Info</description>
                     <width>16-col</width>
                     <label>31035</label>
